# startpe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
helpers/network-gtk/: Cargo.toml  README.md
helpers/network-gtk/src/: ipcfg.rs  main.rs  profile.rs  settings_win.rs  winipc.rs  winplace.rs  wlan.rs
helpers/run-gtk/: Cargo.toml  README.md
helpers/run-gtk/src/: main.rs  run_exec.rs  winicon.rs
helpers/settings-gtk/: Cargo.toml  README.md
helpers/settings-gtk/src/: main.rs  settings_io.rs
helpers/start-menu-gtk/: .gitignore  Cargo.toml
helpers/start-menu-gtk/src/: appsource.rs  icons.rs  main.rs  winipc.rs  winplace.rs  winstyle.rs
helpers/sysinfo-gtk/: Cargo.toml  README.md
helpers/sysinfo-gtk/src/: main.rs  sysinfo_data.rs  winfix.rs  winicon.rs
loader/: Cargo.toml
loader/src/: lib.rs
pebakery/: StartPE.script  diag-taskbar.ps1
src/: alttab.rs  border.rs  config.rs  darkmode.rs  desktop.rs  desktop_filter.rs  dwm_border.rs  main.rs  menu.rs  network.rs  peek.rs  pins.rs  run_dialog.rs  run_window.rs  settings.rs  start_menu.rs  sysinfo.rs  taskbar.rs  taskman.rs  tray.rs  util.rs
syslaunch/: Cargo.toml
syslaunch/src/: main.rs
tools/: build-local.ps1
