# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "startpe_loader"
version = "0.1.6"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Explorer-side loader shim for StartPE in Windows PE: keeps Explorer's shell thread alive past the Win11 taskbar init and launches startpe.exe"
repository = "https://github.com/steeb-k/startpe"

[lib]
name = "startpe_loader"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
