[package]
name = "pe-network-gtk"
version = "0.1.0"
edition = "2021"
description = "GTK4/Libadwaita network manager for Windows PE (wifi flyout + Network Settings; thin client of the winrx-creator GTK4 runtime)"
license = "GPL-3.0-or-later"

[[bin]]
name = "Network"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
async-channel = "2"
winreg = "0.55"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_WiFi",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
